@@ -56,17 +56,12 @@ DEFS = h.to_a
 
 def each_const
   DEFS.each {|name, default_value|
-    if name =~ /\AINADDR_/
-      make_value = "UINT2NUM"
-    else
-      make_value = "INT2NUM"
-    end
     guard = nil
     if /\A(AF_INET6|PF_INET6|IPV6_.*)\z/ =~ name
       # IPv6 is not supported although AF_INET6 is defined on mingw
       guard = "defined(INET6)"
     end
-    yield guard, make_value, name, default_value
+    yield guard, name, default_value
   }
 end
 
@@ -78,7 +73,7 @@ def each_name(pat)
 end
 
 ERB.new(<<'EOS', nil, '%').def_method(Object, "gen_const_decls")
-% each_const {|guard, make_value, name, default_value|
+% each_const {|guard, name, default_value|
 #if !defined(<%=name%>)
 # if defined(HAVE_CONST_<%=name.upcase%>)
 #  define <%=name%> <%=name%>
@@ -91,23 +86,23 @@ ERB.new(<<'EOS', nil, '%').def_method(Object, "gen_const_decls")
 % }
 EOS
 
-ERB.new(<<'EOS', nil, '%').def_method(Object, "gen_const_defs_in_guard(make_value, name, default_value)")
+ERB.new(<<'EOS', nil, '%').def_method(Object, "gen_const_defs_in_guard(name, default_value)")
 #if defined(<%=name%>)
     /* <%= COMMENTS[name] %> */
-    rb_define_const(rb_cSocket, <%=c_str name%>, <%=make_value%>(<%=name%>));
+    rb_define_const(rb_cSocket, <%=c_str name%>, INTEGER2VALUE(<%=name%>));
     /* <%= COMMENTS[name] %> */
-    rb_define_const(rb_mSockConst, <%=c_str name%>, <%=make_value%>(<%=name%>));
+    rb_define_const(rb_mSockConst, <%=c_str name%>, INTEGER2VALUE(<%=name%>));
 #endif
 EOS
 
 ERB.new(<<'EOS', nil, '%').def_method(Object, "gen_const_defs")
-% each_const {|guard, make_value, name, default_value|
+% each_const {|guard, name, default_value|
 %   if guard
 #if <%=guard%>
-<%= gen_const_defs_in_guard(make_value, name, default_value).chomp %>
+<%= gen_const_defs_in_guard(name, default_value).chomp %>
 #endif
 %   else
-<%= gen_const_defs_in_guard(make_value, name, default_value).chomp %>
+<%= gen_const_defs_in_guard(name, default_value).chomp %>
 %   end
 % }
 EOS
@@ -283,6 +278,12 @@ result = ERB.new(<<'EOS', nil, '%').result(binding)
 /* autogenerated file */
 
 <%= INTERN_DEFS.map {|vardef, gen_hash, decl, func| vardef }.join("\n") %>
+
+#ifdef HAVE_LONG_LONG
+#define INTEGER2VALUE(n) ((n) <= 0 ? LL2NUM(n) : ULL2NUM(n))
+#else
+#define INTEGER2VALUE(n) ((n) <= 0 ? LONG2NUM(n) : ULONG2NUM(n))
+#endif
 
 static void
 init_constants(void)
